--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#ffffff" />
     <meta
       name="description"
-      content="Melike Vurucu's (melikechan) personal website."
+      content="Melike Vurucu's (sefakurtipek) personal website."
     />
     <meta name="author" content="Melike Vurucu" />
 
@@ -27,7 +27,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
-    <title>melikechan</title>
+    <title>sefakurtipek</title>
   </head>
 
   <body>
